tests/paczka1/fuzzy1/95308567.err
Error in line 4: IYIV A550 52,9
Error in line 11: u3GYQRsEFjA S789 59,1
Error in line 22: u3GYQRsEFjA S372 96,4
Error in line 31: u3GYQRsEFjA A792 51,9
Error in line 24: yDU S372 85,2
Error in line 33: yDU A550 20,4
